fixing nav on mobile

--- a/PortfolioCSS.css
+++ b/PortfolioCSS.css
@@ -531,12 +531,13 @@ padding-top: 3%;
 }
 
 .navbar{
-  width: 100%;
+  width: 20%;
   padding: 0;
   margin: 0;
   padding-top: 6px;
   padding-bottom: 6px;
   top: auto; 
+  position: fixed;
   bottom: 0; 
 
 }
